# trollrun

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs
src/exec/: config.rs  data.rs  dda_test_run_output  exec.rs  mod.rs  parser.rs  pylon.data  runs.rs
src/marshal/csv/: config.rs  mod.rs  ser.rs  traits.rs
src/norm/: config.rs  marshal.rs  mod.rs  norm.rs
src/unmarshal/: mod.rs  parser.rs  runs.rs  traits.rs
