[package]
name = "trollrun"
version = "0.1.0"
authors = ["William Laeder <codylaeder@gmail.com>"]
edition = "2015"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
lazy_static = "1.4.0"
regex = "1.3.1"
crossbeam = "0.7.3"
